--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+Skip to content
+This repository  
+Search
+Pull requests
+Issues
+Gist
+ @lilacelephant
+ Unwatch 2
+  Star 0
+ Fork 2 lilacelephant/birzha
+ Code  Issues 0  Pull requests 0  Wiki  Pulse  Graphs  Settings
+Branch: master Find file Copy pathbirzha/.gitignore
+4f2fb3a  6 days ago
+@lilacelephant lilacelephant add files to gitignore
+1 contributor
+RawBlameHistory     50 lines (38 sloc)  621 Bytes
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -31,13 +47,9 @@ $RECYCLE.BIN/
 # Thumbnails
 ._*
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
+# Files that might appear on external disk
 .Spotlight-V100
-.TemporaryItems
 .Trashes
-.VolumeIcon.icns
 
 # Directories potentially created on remote AFP share
 .AppleDB
@@ -45,3 +57,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+.settings
+target/
+.project
+.classpath
+*.class
+Status API Training Shop Blog About Pricing
+© 2016 GitHub, Inc. Terms Privacy Security Contact Help
