--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,38 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>4.0.3.RELEASE</version>
 		</dependency>
-		
+
+	  <dependency>
+		  <groupId>com.yandex.money.api</groupId>
+		  <artifactId>yandex-money-sdk-java</artifactId>
+		  <version>5.0.8</version>
+		  <type>jar</type>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>19.0</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>com.squareup.okhttp</groupId>
+		  <artifactId>okhttp</artifactId>
+		  <version>2.7.2</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.5</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>joda-time</groupId>
+		  <artifactId>joda-time</artifactId>
+		  <version>2.9.1</version>
+	  </dependency>
+
   </dependencies>
   
   <build>
