--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -1,49 +1,64 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>kds</groupId>
-    <artifactId>Birzha</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>Controller</artifactId>
-
-  <packaging>war</packaging>
-  <name>Controller Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-
- <dependencies>
-    <dependency>
-      <groupId>kds</groupId>
-      <artifactId>Model</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
         <groupId>kds</groupId>
-        <artifactId>Utils</artifactId>
+        <artifactId>Birzha</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>kds</groupId>
-      <artifactId>Dao</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>kds</groupId>
-      <artifactId>Service</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>kds</groupId>
-      <artifactId>JDBC</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-   <dependency>
-      <groupId>kds</groupId>
-      <artifactId>Security</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
-  
-    </project>
+    </parent>
+    <artifactId>Controller</artifactId>
+
+    <packaging>war</packaging>
+    <name>Controller Maven Webapp</name>
+    <url>http://maven.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>kds</groupId>
+            <artifactId>Model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>kds</groupId>
+            <artifactId>Dao</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>kds</groupId>
+            <artifactId>Service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>kds</groupId>
+            <artifactId>JDBC</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>kds</groupId>
+            <artifactId>Security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yandex.money.api</groupId>
+            <artifactId>yandex-money-sdk-java</artifactId>
+            <version>5.0.8</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+</project>
