Fixed some issues

--- a/Controller/src/main/resources/merchants.properties
+++ b/Controller/src/main/resources/merchants.properties
@@ -2,3 +2,5 @@ yandexmoney.clientId = 304A3A112D06FAB63E5F9A3FB33AADC0221AE1EE7F5FC69D23DDCB775
 yandexmoney.redirectURI = http://localhost:8080/merchants/yandexmoney/token/access
 yandexmoney.responseType = code
 yandexmoney.mediaType = application/x-www-form-urlencoded
+yandexmoney.companyWalletId = birzha.application
+yandexmoney.commissionP2P = 0.005
