--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -49,11 +49,16 @@
             <artifactId>gson</artifactId>
             <version>2.5</version>
         </dependency>
-
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yandex.money.api</groupId>
+            <artifactId>yandex-money-sdk-java</artifactId>
+            <version>5.0.8</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
