--- a/pom.xml
+++ b/pom.xml
@@ -203,10 +203,18 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.yandex.money.api</groupId>
-			<artifactId>yandex-money-sdk-java</artifactId>
-			<version>5.0.8</version>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.5.0</version>
 			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.springtestdbunit</groupId>
+			<artifactId>spring-test-dbunit</artifactId>
+			<version>1.2.0</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
