--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<groupId>javax.servlet.jsp.jstl</groupId>
+			<artifactId>javax.servlet.jsp.jstl-api</artifactId>
+			<version>1.2.1</version>
 		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>javax.servlet.jsp.jstl</groupId>-->
+			<!--<artifactId>jstl</artifactId>-->
+			<!--<version>1.2</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework</groupId>
