--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>Dao</module>
 		<module>JDBC</module>
 		<module>Controller</module>
+		<module>Merchants</module>
 	</modules>
 
 	<properties>
@@ -26,6 +27,12 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.38</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1.1</version>
 		</dependency>
 
 		<dependency>
