--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -24,5 +24,26 @@
       <artifactId>Dao</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+      <dependency>
+        <groupId>com.squareup.okhttp</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>2.7.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.5</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.9.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.yandex.money.api</groupId>
+        <artifactId>yandex-money-sdk-java</artifactId>
+        <version>5.0.8</version>
+        <type>jar</type>
+      </dependency>
   </dependencies>
 </project>
