--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -40,9 +40,9 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp</groupId>
+            <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>2.7.2</version>
+            <version>3.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
