Added Perfect Money functional

--- a/Controller/src/main/resources/dev/merchants/perfectmoney.properties
+++ b/Controller/src/main/resources/dev/merchants/perfectmoney.properties
@@ -1,11 +1,12 @@
+accountId=8444403
+accountPass=777Sifama07
 payeeName=Exrates
 paymentSuccess=http://localhost:8080/merchants/perfectmoney/payment/success
 paymentFailure=http://localhost:8080/merchants/perfectmoney/payment/failure
 paymentStatus=http://localhost:8080/merchants/perfectmoney/payment/status
-payeeAccount=U11948015
-#ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;
-ipWhiteList=192.168.0.16;
-
+payeeAccount=U11968085
+alternatePassphrase=24T8b0kXf3dckThIbgsOucmXH
+ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;
 
 
 
