--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -60,5 +60,10 @@
             <version>5.0.8</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
