--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,17 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.1-1</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+        <dependency>
+	  	   	<groupId>javax.mail</groupId>
+	    	<artifactId>mail</artifactId>
+	   		 <version>1.4.3</version>
+   		 </dependency>
 	</dependencies>
 
 	<build>
