--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -45,5 +45,10 @@
         <version>5.0.8</version>
         <type>jar</type>
       </dependency>
+      <dependency>
+        <groupId>info.blockchain</groupId>
+        <artifactId>api</artifactId>
+        <version>1.1.0</version>
+      </dependency>
   </dependencies>
 </project>
