--- a/pom.xml
+++ b/pom.xml
@@ -243,4 +243,16 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>api-v1-client-java-mvn-repo</id>
+			<url>https://raw.githubusercontent.com/blockchain/api-v1-client-java/mvn-repo/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
 </project>
