--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -56,5 +56,32 @@
       <version>LATEST</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>advcash.wsm</groupId>
+      <artifactId>advcash-sdk</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/advcash-sdk.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.axis</groupId>
+      <artifactId>axis</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml</groupId>
+      <artifactId>jaxrpc-api</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-discovery</groupId>
+      <artifactId>commons-discovery</artifactId>
+      <version>0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>wsdl4j</groupId>
+      <artifactId>wsdl4j</artifactId>
+      <version>1.6.2</version>
+    </dependency>
   </dependencies>
 </project>
