--- a/Controller/src/main/resources/dev/merchants/advcashmoney.properties
+++ b/Controller/src/main/resources/dev/merchants/advcashmoney.properties
@@ -1,10 +1,10 @@
-advcash.accountId=pay.baker2020@gmail.com
-advcash.accountPass=Sifama07
-advcash.payeeName=Exratestest
+advcash.accountId=huhuxadoo@gmail.com
+advcash.accountPass=777Sifama07
+advcash.payeeName=Exrates
 advcash.paymentSuccess=http://127.0.0.1:8080/merchants/advcash/payment/success
 advcash.paymentFailure=http://127.0.0.1:8080/merchants/advcash/payment/failure
 advcash.paymentStatus=http://127.0.0.1:8080/merchants/advcash/payment/status
-advcash.USDAccount= U101891390188
-advcash.EURAccount=E628150192372
-advcash.payeePassword=Sifama075698
+advcash.USDAccount= U855292338514
+advcash.EURAccount=E691209063166
+advcash.payeePassword=70amafiS7779723
 advcash.ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;193.93.79.99;
