--- a/Controller/src/main/resources/prod/merchants/advcashmoney.properties
+++ b/Controller/src/main/resources/prod/merchants/advcashmoney.properties
@@ -1,9 +1,9 @@
 advcash.accountId=huhuxadoo@gmail.com
 advcash.accountPass=777Sifama07
 advcash.payeeName=Exrates
-advcash.paymentSuccess=http://prod.exrates.me/merchants/advcash/payment/success
-advcash.paymentFailure=http://prod.exrates.me/merchants/advcash/payment/failure
-advcash.paymentStatus=http://prod.exrates.me/merchants/advcash/payment/status
+advcash.paymentSuccess=https://lk.exrates.me/merchants/advcash/payment/success
+advcash.paymentFailure=https://lk.exrates.me/merchants/advcash/payment/failure
+advcash.paymentStatus=https://lk.exrates.me/merchants/advcash/payment/status
 advcash.USDAccount= U855292338514
 advcash.EURAccount=E691209063166
 advcash.payeePassword=70amafiS7779723
