--- a/Controller/src/main/resources/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/resources/prod/merchants/perfectmoney.properties
@@ -1,9 +1,9 @@
 accountId=8444403
 accountPass=777Sifama07
 payeeName=Exrates
-paymentSuccess=http://prod.exrates.me/merchants/perfectmoney/payment/success
-paymentFailure=http://prod.exrates.me/merchants/perfectmoney/payment/failure
-paymentStatus=http://prod.exrates.me/merchants/perfectmoney/payment/status
+paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
+paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
+paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
 USDAccount=U11968085
 EURAccount=E11508301
 alternatePassphrase=59849UnKgUvwxLetcxLGevJIw
