Fixed bug with profile

--- a/Controller/src/main/resources/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/resources/prod/merchants/perfectmoney.properties
@@ -7,9 +7,9 @@
 accountId=6290878
 accountPass=777Sifama07
 payeeName=Exrates
-paymentSuccess=http://prod.exrates.me/merchants/perfectmoney/payment/success
-paymentFailure=http://prod.exrates.me/merchants/perfectmoney/payment/failure
-paymentStatus=http://prod.exrates.me/merchants/perfectmoney/payment/status
+paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
+paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
+paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
 USDAccount=U11198056
 EURAccount=E6038177
 alternatePassphrase=41ZP88K5IAUPwyCuVzCEvBDJv
