--- a/Security/pom.xml
+++ b/Security/pom.xml
@@ -12,6 +12,7 @@
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <javax.json.version>1.0.4</javax.json.version>
   </properties>
   <dependencies>
     	<dependency>
@@ -34,5 +35,10 @@
             <artifactId>Dao</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+      <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>${javax.json.version}</version>
+      </dependency>
   </dependencies>
 </project>
