--- a/Controller/src/main/dev/merchants/perfectmoney.properties
+++ b/Controller/src/main/dev/merchants/perfectmoney.properties
@@ -7,9 +7,9 @@
 accountId=6290878
 accountPass=777Sifama07
 payeeName=Exrates
-paymentSuccess=http://prod.exrates.me/merchants/perfectmoney/payment/success
-paymentFailure=http://prod.exrates.me/merchants/perfectmoney/payment/failure
-paymentStatus=http://prod.exrates.me/merchants/perfectmoney/payment/status
+paymentSuccess=http://localhost:8080/merchants/perfectmoney/payment/success
+paymentFailure=http://localhost:8080/merchants/perfectmoney/payment/failure
+paymentStatus=http://localhost:8080/merchants/perfectmoney/payment/status
 USDAccount=U11198056
 EURAccount=E6038177
 alternatePassphrase=41ZP88K5IAUPwyCuVzCEvBDJv
