--- a/Controller/src/main/uat/db.properties
+++ b/Controller/src/main/uat/db.properties
@@ -1,4 +1,4 @@
-db.user = root
-db.password = Nf38930ds2j
+db.user = devpreprod
+db.password = Fh24soaf8sy3
 db.url = jdbc:mysql://localhost:3306/birzha
 db.classname = com.mysql.jdbc.Driver
