--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <javax.json.version>1.0.4</javax.json.version>
+        <jackson-databind.version>2.6.3</jackson-databind.version>
     </properties>
 
     <dependencies>
@@ -72,10 +73,8 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.6.3</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
-
-
     </dependencies>
 
     <profiles>
