--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -81,6 +81,7 @@
         <profile>
             <id>dev</id>
             <build>
+                <finalName>ROOT</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -105,6 +106,7 @@
         <profile>
             <id>uat</id>
             <build>
+                <finalName>ROOT</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -129,6 +131,7 @@
         <profile>
             <id>prod</id>
             <build>
+                <finalName>ROOT</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
