--- a/Controller/src/main/dev/merchants/edrcoin.properties
+++ b/Controller/src/main/dev/merchants/edrcoin.properties
@@ -1,3 +1,3 @@
-id=14
-account=EDC13707253
-key=cfc6ac5b15d16ad4dce2b00ccf6593db
+edrcoin.id=14
+edrcoin.account=EDC13707253
+edrcoin.key=cfc6ac5b15d16ad4dce2b00ccf6593db
