--- a/Controller/src/main/prod/merchants/edrcoin.properties
+++ b/Controller/src/main/prod/merchants/edrcoin.properties
@@ -1,3 +1,3 @@
-id=27
-account=EDRC2753690
-key=dad3d0c5970fa800056fbb3e486b98a7
+edrcoin.id=27
+edrcoin.account=EDRC2753690
+edrcoin.key=dad3d0c5970fa800056fbb3e486b98a7
