--- a/Controller/src/main/uat/capcha.properties
+++ b/Controller/src/main/uat/capcha.properties
@@ -1,2 +1,2 @@
-key=6Lf_VBwTAAAAAMTA1crOAYvL7XwAwVa_Ff09TD8Q
-skey=6Lf_VBwTAAAAACA8t8v5ZwAitbwae0EO4qsG55yj
+captcha.key=6Lf_VBwTAAAAAMTA1crOAYvL7XwAwVa_Ff09TD8Q
+captcha.skey=6Lf_VBwTAAAAACA8t8v5ZwAitbwae0EO4qsG55yj
