--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -17,6 +17,11 @@
   </properties>
  
  <dependencies>
+     <dependency>
+         <groupId>com.google.code.gson</groupId>
+         <artifactId>gson</artifactId>
+         <version>2.5</version>
+     </dependency>
  		
  </dependencies>
  
