Updated edr-coin properties for uat server

--- a/Controller/src/main/uat/merchants/edrcoin.properties
+++ b/Controller/src/main/uat/merchants/edrcoin.properties
@@ -1,3 +1,3 @@
-edrcoin.id=27
-edrcoin.account=EDRC2753690
-edrcoin.key=dad3d0c5970fa800056fbb3e486b98a7
+edrcoin.id = 14
+edrcoin.account = EDC13707253
+edrcoin.key = cfc6ac5b15d16ad4dce2b00ccf6593dbп
