--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -89,6 +89,11 @@
       <artifactId>quartz</artifactId>
       <version>${quartz.version}</version>
     </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 
 </project>
