Added new .ignore options

--- a/.gitignore
+++ b/.gitignore
@@ -64,5 +64,7 @@ target/
 .project
 .classpath
 *.class
+*.iml
+.idea/
 Status API Training Shop Blog About Pricing
 © 2016 GitHub, Inc. Terms Privacy Security Contact Help
