--- a/Controller/src/main/dev/uploadfiles.properties
+++ b/Controller/src/main/dev/uploadfiles.properties
@@ -1,4 +1,4 @@
-upload.uploadDir = /Users/random9/
+upload.uploadDir = .
 upload.userFilesDir = /Users/random9/dir/
 upload.userFilesLogicalDir = /userFiles
 upload.maxFile = 5242880
