tune session management + upload file changing + fix  some bugs

--- a/Controller/src/main/dev/uploadfiles.properties
+++ b/Controller/src/main/dev/uploadfiles.properties
@@ -1,5 +1,5 @@
-upload.uploadDir = .
-upload.userFilesDir = /Users/random9/dir/
+upload.uploadDir = c:/Users/Public/upload/
+upload.userFilesDir = c:/Users/Public/upload/
 upload.userFilesLogicalDir = /userFiles
 upload.maxFile = 5242880
 upload.maxRequest = 15728640
