--- a/Controller/src/main/dev/news.properties
+++ b/Controller/src/main/dev/news.properties
@@ -1,4 +1,4 @@
-news.locationDir = /Users/Public/news/
+news.locationDir = c:/Users/Public/news/
 news.urlPath = /news
 news.maxFile = 5000000
 news.maxRequest = 6000000
