--- a/Controller/src/main/prod/news.properties
+++ b/Controller/src/main/prod/news.properties
@@ -1,4 +1,5 @@
 news.locationDir = /opt/news/
+news.tempImageDir = /opt/news/img
 news.urlPath = /news
 news.maxFile = 5000000
 news.maxRequest = 6000000
