add file upload + all news modal

--- a/Controller/src/main/dev/news.properties
+++ b/Controller/src/main/dev/news.properties
@@ -1,5 +1,5 @@
 news.locationDir = c:/Users/Public/news/
-news.tempImageDir = c:/Users/Public/news/img
+news.tempImageDir = c:/Users/Public/news/img/
 news.urlPath = /news
 news.maxFile = 5000000
 news.maxRequest = 6000000
