--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -94,6 +94,12 @@
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.9.2</version>
+    </dependency>
+
   </dependencies>
 
 </project>
