fix perfect money properties

--- a/Controller/src/main/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/prod/merchants/perfectmoney.properties
@@ -1,16 +1,10 @@
-#old account
-#accountId=8444403
-#accountPass=777Sifama07
-#USDAccount=U11968085
-#EURAccount=E11508301
-#alternatePassphrase=59849UnKgUvwxLetcxLGevJIw
-accountId=6290878
-accountPass=777Sifama07
+accountId=5096709
+accountPass=Qqo-3VS-Z6t-6od
 payeeName=Exrates
 paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
 paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
 paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
-USDAccount=U11198056
-EURAccount=E6038177
-alternatePassphrase=41ZP88K5IAUPwyCuVzCEvBDJv
-ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;
+USDAccount=U13584384
+EURAccount=U13584384
+alternatePassphrase=5TC122iw3WTKfUhbOoEsowFDp
+ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;78.41.203.75;
