--- a/Controller/src/main/resources/edc_cli_wallet.properties
+++ b/Controller/src/main/resources/edc_cli_wallet.properties
@@ -2,4 +2,4 @@ edc.blockchain.host_fast = http://localhost:8091
 edc.blockchain.host_delayed = http://localhost:8092
 edc.account.registrar = exrates-currency-exchange
 edc.account.referrer = exrates-currency-exchange
-edc.account.main = ajet2103
+edc.account.main = edc334117
