--- a/Controller/src/main/uat/merchants/advcashmoney.properties
+++ b/Controller/src/main/uat/merchants/advcashmoney.properties
@@ -1,10 +1,10 @@
-advcash.accountId=huhuxadoo@gmail.com
-advcash.accountPass=777Sifama07
+advcash.accountId=merchant@exrates.me
+advcash.accountPass=fTPiid5T7&%Y
 advcash.payeeName=Exrates
-advcash.paymentSuccess=http://prod.exrates.me/merchants/advcash/payment/success
-advcash.paymentFailure=http://prod.exrates.me/merchants/advcash/payment/failure
-advcash.paymentStatus=http://prod.exrates.me/merchants/advcash/payment/status
-advcash.USDAccount= U855292338514
-advcash.EURAccount=E691209063166
-advcash.payeePassword=70amafiS7779723
+advcash.paymentSuccess=http://test.exrates.me/merchants/advcash/payment/success
+advcash.paymentFailure=http://test.exrates.me/merchants/advcash/payment/failure
+advcash.paymentStatus=http://test.exrates.me/merchants/advcash/payment/status
+advcash.USDAccount=U183883380777
+advcash.EURAccount=E664903102463
+advcash.payeePassword=8Y@tc7l5fg
 advcash.ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;193.93.79.99;
