--- a/Controller/src/main/prod/merchants/nixmoney.properties
+++ b/Controller/src/main/prod/merchants/nixmoney.properties
@@ -1,7 +1,7 @@
 nixmoney.url=https://www.nixmoney.com/merchant.jsp
-nixmoney.payeeAccountUSD=U39716902942377
-nixmoney.payeeAccountEUR=E72377979134374
-nixmoney.payeePassword=Sifama07
+nixmoney.payeeAccountUSD=U58798588544478
+nixmoney.payeeAccountEUR=E28090904478879
+nixmoney.payeePassword=rd28&EQXa@Ir
 nixmoney.payeeName=Exrates
 nixmoney.paymentUrl=https://lk.exrates.me/merchants/nixmoney/payment/success
 nixmoney.noPaymentUrl=https://lk.exrates.me/merchants/nixmoney/payment/failure
