--- a/Controller/src/main/dev/merchants/nixmoney.properties
+++ b/Controller/src/main/dev/merchants/nixmoney.properties
@@ -1,9 +1,10 @@
-nixmoney.url=https://www.dev.nixmoney.com/merchant.jsp
-nixmoney.payeeAccountUSD=U32537844054788
-nixmoney.payeeAccountEUR=E74788251537537
-nixmoney.payeePassword=jet2103
+#nixmoney.url=https://www.dev.nixmoney.com/merchant.jsp
+nixmoney.url=https://www.nixmoney.com/merchant.jsp
+nixmoney.payeeAccountUSD=U58798588544478
+nixmoney.payeeAccountEUR=E28090904478879
+nixmoney.payeePassword=rd28&EQXa@Ir
 nixmoney.payeeName=Exrates
 nixmoney.paymentUrl=http://127.0.0.1:9000/merchants/nixmoney/payment/success
 nixmoney.noPaymentUrl=http://127.0.0.1:9000/merchants/nixmoney/payment/failure
-nixmoney.statustUrl=http://188.166.28.194:9000/merchants/nixmoney/payment/status
+nixmoney.statustUrl=http://193.93.79.99:9000/merchants/nixmoney/payment/status
 
