--- a/Controller/src/main/resources/edc_cli_wallet.properties
+++ b/Controller/src/main/resources/edc_cli_wallet.properties
@@ -1,5 +1,7 @@
-edc.blockchain.host_fast = http://localhost:8091
-edc.blockchain.host_delayed = http://localhost:8092
+#edc.blockchain.host_fast = http://localhost:8091
+#edc.blockchain.host_delayed = http://localhost:8092
+edc.blockchain.host_fast = http://163.172.76.229:8091
+edc.blockchain.host_delayed = http://163.172.76.229:8092
 edc.account.registrar = exrates-currency-exchange
 edc.account.referrer = exrates-currency-exchange
 edc.account.main = edc334117
