PROGRAM-253_BTC (expire)

--- a/Controller/src/main/dev/job.properties
+++ b/Controller/src/main/dev/job.properties
@@ -1,2 +1,4 @@
 # 4320 = 72 hours * 60 minutes
-ir.invoiceTimeOutIntervalMinutes = 10
+invoice.invoiceTimeOutIntervalMinutes = 10
+# 5760 = 96 hours * 60 minutes
+btcInvoice.invoiceTimeOutIntervalMinutes = 1
