--- a/Controller/src/main/uat/job.properties
+++ b/Controller/src/main/uat/job.properties
@@ -1,1 +1,4 @@
-ir.invoiceTimeOutIntervalMinutes = 5
+# 4320 = 72 hours * 60 minutes
+invoice.invoiceTimeOutIntervalMinutes = 5
+# 5760 = 96 hours * 60 minutes
+btcInvoice.invoiceTimeOutIntervalMinutes = 5
