--- a/Controller/src/main/prod/job.properties
+++ b/Controller/src/main/prod/job.properties
@@ -1,2 +1,4 @@
 # 4320 = 72 hours * 60 minutes
-ir.invoiceTimeOutIntervalMinutes = 4320
+invoice.invoiceTimeOutIntervalMinutes = 4320
+# 5760 = 96 hours * 60 minutes
+btcInvoice.invoiceTimeOutIntervalMinutes = 5760
