add btcd-cli4j last version as external jar

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<spring-websocket.version>4.3.2.RELEASE</spring-websocket.version>
 		<spring-messaging.version>4.3.0.RELEASE</spring-messaging.version>
 		<bitcoinj.version>0.14.3</bitcoinj.version>
-		<btcd-cli4j.version>0.5.1</btcd-cli4j.version>
+		<btcd-cli4j.version>0.5.8</btcd-cli4j.version>
 	</properties>
 
 	<dependencies>
@@ -354,6 +354,11 @@
 			<id>mvn-nemp-ftp</id>
 			<name>Nemp's Maven Repository</name>
 			<url>http://mvn.neemre.com/</url>
+		</repository>
+		<repository>
+			<id>in-project</id>
+			<name>In Project Repo</name>
+			<url>file://${project.basedir}/Service/src/main/resources</url>
 		</repository>
 	</repositories>
 </project>
