--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -99,6 +99,12 @@
       <artifactId>jsoup</artifactId>
       <version>1.9.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.3.6</version>
+    </dependency>
+
 
   </dependencies>
 
