--- a/Controller/src/main/uat/merchants/btc_wallet.properties
+++ b/Controller/src/main/uat/merchants/btc_wallet.properties
@@ -1,3 +1,3 @@
 bitcoin.service.class=BitcoinCoreWalletServiceImpl
-btc_wallet_password=sdsdf lerslfg kjherb szkxyct dfnbr ciuvy fufygf psdkene dcjchebwhsg didfu bsvscs fgfgfg
-btc_backup_folder=btc_backup_folder=/data/.bitcoin/btc_backup/
+btc.wallet.password=pass123
+btc.backup.folder=btc_backup_folder=/data/.bitcoin/btc_backup/
