--- a/Controller/src/main/prod/merchants/btc_wallet.properties
+++ b/Controller/src/main/prod/merchants/btc_wallet.properties
@@ -1,3 +1,3 @@
 bitcoin.service.class=BitcoinJWalletServiceImpl
-btc_wallet_password=sdsdf lerslfg kjherb szkxyct dfnbr ciuvy fufygf psdkene dcjchebwhsg didfu bsvscs fgfgfg
-btc_backup_folder=/data/.bitcoin/btc_backup/
+btc.wallet.password=sdsdf lerslfg kjherb szkxyct dfnbr ciuvy fufygf psdkene dcjchebwhsg didfu bsvscs fgfgfg
+btc.backup.folder=/data/.bitcoin/btc_backup/
