add settings interface for change params

--- a/Controller/src/main/resources/session.properties
+++ b/Controller/src/main/resources/session.properties
@@ -1,2 +1,3 @@
 session.lifeTypeParamName = sessionLifeTypeId
-session.default_session_lifetime_minutes = 1
+session.default_session_lifetime_minutes = 20
+session.timeParamName = sessionTimeMinutes
