--- a/Controller/src/main/resources/session.properties
+++ b/Controller/src/main/resources/session.properties
@@ -1,3 +1,4 @@
 session.lifeTypeParamName = sessionLifeTypeId
 session.default_session_lifetime_minutes = 20
 session.timeParamName = sessionTimeMinutes
+session.lastRequestParamName = lastRequest
