--- a/Controller/src/main/uat/merchants/edcmerchant.properties
+++ b/Controller/src/main/uat/merchants/edcmerchant.properties
@@ -1,3 +1,3 @@
 edcmerchant.token = 0190804484737779216097337067072357
-edcmerchant.main_account = ajet2103
+edcmerchant.main_account = ex-r-input
 edcmerchant.hook = http://exrates.tech/merchants/edc/payment/received
