--- a/Controller/src/main/resources/edc_cli_wallet.properties
+++ b/Controller/src/main/resources/edc_cli_wallet.properties
@@ -4,5 +4,5 @@ edc.blockchain.host_fast = http://163.172.77.155:8091/
 edc.blockchain.host_delayed = http://163.172.77.155:8092/
 edc.account.registrar = exrates-currency-exchange
 edc.account.referrer = exrates-currency-exchange
-edc.account.main = ajet2103
-edc.account.main.private.key = 5J3BM7vgXuxzwJrLK6rhx9umzZQbezS17h7ApwAiPJ55Lz3LtYt
+edc.account.main = ex-r-payment
+edc.account.main.private.key = 5KT1aBzzgRtxbRHAUsFHB3f1NtPg8vTzfNaoQ3D1Z5iWZre2KDh
