--- a/Controller/src/main/dev/job.properties
+++ b/Controller/src/main/dev/job.properties
@@ -5,3 +5,5 @@ invoice.blockNotifyUsers = true
 btcInvoice.invoiceTimeOutIntervalMinutes = 5
 btcInvoice.blockNotifyUsers = true
 # to switch off set -1
+withdraw.rejectErrorTimeout=3
+withdraw.walletNotifyEmails=golvazin@gmail.com,wayfarer2006@ukr.net
