--- a/Controller/src/main/prod/job.properties
+++ b/Controller/src/main/prod/job.properties
@@ -5,3 +5,5 @@ invoice.blockNotifyUsers = false
 btcInvoice.invoiceTimeOutIntervalMinutes = 5760
 btcInvoice.blockNotifyUsers = false
 # to switch off set -1
+withdraw.rejectErrorTimeout=4320
+withdraw.walletNotifyEmails=
