fix eth account

--- a/Controller/src/main/dev/merchants/ethereum.properties
+++ b/Controller/src/main/dev/merchants/ethereum.properties
@@ -1,7 +1,7 @@
 #Main
-#ethereum.destinationDir = C:\\Ethereum1\\keystore\\
-#ethereum.password = 061372f91f949effb934abadff5f0636de09113d
-#ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
+ethereum.destinationDir = C:\\Ethereum1\\keystore\\
+ethereum.password = 061372f91f949effb934abadff5f0636de09113d
+ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
 
 #Test
 #ethereum.destinationDir = C:\\Users\\Administrator\\AppData\\Roaming\\Ethereum\\testnet\\keystore\\
