--- a/Controller/src/main/uat/merchants/btc_wallet.properties
+++ b/Controller/src/main/uat/merchants/btc_wallet.properties
@@ -1,3 +1,4 @@
 bitcoin.service.class=BitcoinCoreWalletServiceImpl
 btc.wallet.password=pass123
 btc.backup.folder=/data/.bitcoin/btc_backup/
+btc.propertySource=node_config.properties
