--- a/Controller/src/main/prod/merchants/btc_wallet.properties
+++ b/Controller/src/main/prod/merchants/btc_wallet.properties
@@ -1,3 +1,3 @@
-bitcoin.service.class=BitcoinCoreWalletServiceImpl
 btc.wallet.password=MxQR8wTcEuuNJdFzxGKz9MDcjawg_Y5N66uIHELS5JY=
 btc.backup.folder=/data/.bitcoin/btc_backup/
+btc.propertySource=node_config.properties
