stop-orders fix

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Status API Training Shop Blog About Pricing
 © 2016 GitHub, Inc. Terms Privacy Security Contact Help
 /my
 /Service/src/main/java/me/exrates/service/util/test.java
+/ripp
+/script.sql
