--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,12 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
+
 	</dependencies>
 
 
