--- a/Controller/src/main/dev/merchants/ripple.properties
+++ b/Controller/src/main/dev/merchants/ripple.properties
@@ -6,3 +6,5 @@ ripple.secret=shHV5ieKBYLFaUtZy9SGmMGSBi6Th
 
 
 ripple.rippled.rpcUrl=https://api.altnet.rippletest.net:51234
+ripple.account.address=1111
+ripple.account.secret=2222
