fix ethereum classic

--- a/Controller/src/main/uat/merchants/ethereum.properties
+++ b/Controller/src/main/uat/merchants/ethereum.properties
@@ -4,6 +4,7 @@
 #ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
 
 #Test
+ethereum.currency = Ethereum
 ethereum.url = http://localhost:8545/
 ethereum.destinationDir = //data//ethereum//testnet//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
