--- a/Controller/src/main/dev/merchants/advcashmoney.properties
+++ b/Controller/src/main/dev/merchants/advcashmoney.properties
@@ -1,3 +1,4 @@
+advcash.url=https://wallet.advcash.com/sci/
 advcash.accountId=merchant@exrates.me
 advcash.accountPass=fTPiid5T7&%Y
 advcash.payeeName=Exrates
