--- a/Controller/src/main/uat/node_config/node_config_dash.properties
+++ b/Controller/src/main/uat/node_config/node_config_dash.properties
@@ -7,3 +7,4 @@ node.bitcoind.http.auth_scheme = Basic
 node.bitcoind.notification.alert.port = 5358
 node.bitcoind.notification.block.port = 5359
 node.bitcoind.notification.wallet.port = 5360
+node.bitcoind.notification.instantsend.port = 5361
