--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Status API Training Shop Blog About Pricing
 /Service/src/main/java/me/exrates/service/util/test.java
 /ripp
 /script.sql
+/dev_exrates_dump.sql
