--- a/Controller/src/main/uat/merchants/perfectmoney.properties
+++ b/Controller/src/main/uat/merchants/perfectmoney.properties
@@ -2,10 +2,10 @@ perfectmoney.url=https://perfectmoney.is/api/step1.asp
 perfectmoney.accountId=5096709
 perfectmoney.accountPass=Qqo-3VS-Z6t-6od
 perfectmoney.payeeName=Exrates
-perfectmoney.paymentSuccess=http://test.exrates.me/merchants/perfectmoney/payment/success
-perfectmoney.paymentFailure=http://test.exrates.me/merchants/perfectmoney/payment/failure
-perfectmoney.paymentStatus=http://test.exrates.me/merchants/perfectmoney/payment/status
-perfectmoney.#paymentStatus=https://test.exrates.me/merchants/perfectmoney/payment/status
+perfectmoney.paymentSuccess=http://dev.exrates.tech/merchants/perfectmoney/payment/success
+perfectmoney.paymentFailure=http://dev.exrates.tech/merchants/perfectmoney/payment/failure
+perfectmoney.paymentStatus=http://dev.exrates.tech/merchants/perfectmoney/payment/status
+perfectmoney.#paymentStatus=https://dev.exrates.tech/merchants/perfectmoney/payment/status
 perfectmoney.USDAccount=U13584384
 perfectmoney.EURAccount=E13908218
 perfectmoney.alternatePassphrase=05V047CXHTgghLEkycoLpxwkE
