--- a/Controller/src/main/uat/merchants/edcmerchant.properties
+++ b/Controller/src/main/uat/merchants/edcmerchant.properties
@@ -1,4 +1,4 @@
 edcmerchant.token = 0190804484737779216097337067072357
 edcmerchant.main_account = ex-r-input
-edcmerchant.hook = http://exrates.tech/merchants/edc/payment/received
+edcmerchant.hook = http://dev.exrates.tech/merchants/edc/payment/received
 edcmerchant.history = https://receive.edinarcoin.com/history/
