--- a/Controller/src/main/uat/merchants/interkassa.properties
+++ b/Controller/src/main/uat/merchants/interkassa.properties
@@ -1,5 +1,5 @@
 interkassa.url=https://sci.interkassa.com/
 interkassa.checkoutId=57163a9b3d1eafe27b8b456a
-interkassa.statustUrl=http://prod.exrates.me/merchants/interkassa/payment/status
-interkassa.successtUrl=http://prod.exrates.me/merchants/interkassa/payment/success
+interkassa.statustUrl=http://dev.exrates.tech/merchants/interkassa/payment/status
+interkassa.successtUrl=http://dev.exrates.tech/merchants/interkassa/payment/success
 interkassa.secretKey=7pKC765ZsUGGHQIN
