--- a/Controller/src/main/uat/merchants/nixmoney.properties
+++ b/Controller/src/main/uat/merchants/nixmoney.properties
@@ -3,7 +3,7 @@ nixmoney.payeeAccountUSD=U58798588544478
 nixmoney.payeeAccountEUR=E28090904478879
 nixmoney.payeePassword=rd28&EQXa@Ir
 nixmoney.payeeName=Exrates
-nixmoney.paymentUrl=http://exrates.tech/merchants/nixmoney/payment/success
-nixmoney.noPaymentUrl=http://exrates.tech/merchants/nixmoney/payment/failure
-nixmoney.statustUrl=http://exrates.tech/merchants/nixmoney/payment/status
+nixmoney.paymentUrl=http://dev.exrates.tech/merchants/nixmoney/payment/success
+nixmoney.noPaymentUrl=http://dev.exrates.tech/merchants/nixmoney/payment/failure
+nixmoney.statustUrl=http://dev.exrates.tech/merchants/nixmoney/payment/status
 
