--- a/Controller/src/main/prod/merchants/stellar.properties
+++ b/Controller/src/main/prod/merchants/stellar.properties
@@ -1,5 +1,5 @@
 
-stellar.horizon.url=https://horizon-testnet.stellar.org/
+stellar.horizon.url=163.172.53.240:60020
 stellar.account.name=GCK6RBB7TNK4YGMQ6VMJKICVPIJQXW6PUVONLF6UW2BQFMRMQNFCLK5H
 stellar.account.seed=SDGN54CAQP6ESFDWCKZSMZM3D562E3NHQOP43DOS5KCC3WJZKRF4L7ZT
-stellar.mode=TEST
+stellar.mode=PUBLIC
