--- a/Controller/src/main/prod/merchants/advcashmoney.properties
+++ b/Controller/src/main/prod/merchants/advcashmoney.properties
@@ -1,6 +1,6 @@
 advcash.url=https://wallet.advcash.com/sci/
 advcash.accountId=merchant@exrates.me
-advcash.accountPass=fTPiid5T7&%Y
+advcash.accountPass=EkCbOZh8@
 advcash.payeeName=Exrates
 advcash.paymentSuccess=https://lk.exrates.me/merchants/advcash/payment/success
 advcash.paymentFailure=https://lk.exrates.me/merchants/advcash/payment/failure
