--- a/Controller/src/main/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/prod/merchants/perfectmoney.properties
@@ -1,6 +1,6 @@
 perfectmoney.url=https://perfectmoney.is/api/step1.asp
 perfectmoney.accountId=5096709
-perfectmoney.accountPass=Qqo-3VS-Z6t-6od
+perfectmoney.accountPass=0B5GYdeF@
 perfectmoney.payeeName=Exrates
 perfectmoney.paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
 perfectmoney.paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
