--- a/Controller/src/main/dev/merchants/perfectmoney.properties
+++ b/Controller/src/main/dev/merchants/perfectmoney.properties
@@ -1,6 +1,6 @@
 perfectmoney.url=https://perfectmoney.is/api/step1.asp
 perfectmoney.accountId=5096709
-perfectmoney.accountPass=Qqo-3VS-Z6t-6od
+perfectmoney.accountPass=0B5GYdeF@
 perfectmoney.payeeName=Exrates
 perfectmoney.paymentSuccess=http://193.93.79.99:9000/merchants/perfectmoney/payment/success
 perfectmoney.paymentFailure=http://193.93.79.99:9000/merchants/perfectmoney/payment/failure
