--- a/Controller/src/main/dev/merchants/payeer.properties
+++ b/Controller/src/main/dev/merchants/payeer.properties
@@ -1,7 +1,7 @@
 payeer.url=https://payeer.com/merchant/
 payeer.m_shop=290483137
 payeer.m_desc=Exrates input
-payeer.m_key=WvTrnur1u16dGSZh
+payeer.m_key=1u1nur6derftT3658
 
 
 
