--- a/Controller/src/main/dev/merchants/advcashmoney.properties
+++ b/Controller/src/main/dev/merchants/advcashmoney.properties
@@ -7,5 +7,5 @@ advcash.paymentFailure=http://127.0.0.1:8080/merchants/advcash/payment/failure
 advcash.paymentStatus=http://127.0.0.1:8080/merchants/advcash/payment/status
 advcash.USDAccount=U183883380777
 advcash.EURAccount=E664903102463
-advcash.payeePassword=8Y@tc7l5fg
+advcash.payeePassword=EkCbOZh8@
 advcash.ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;193.93.79.99;
