--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -11,4 +11,4 @@ mail_info.user=no-replay@exrates.top
 mail_info.password=Mt5qNrHjjt
 
 mail_info.allowedOnly=true
-mail_info.allowedEmails=golvazin@gmail.com
+mail_info.allowedEmails=golvazin@gmail.com,avto12@i.ua
