--- a/Controller/src/main/prod/merchants/nixmoney.properties
+++ b/Controller/src/main/prod/merchants/nixmoney.properties
@@ -5,5 +5,5 @@ nixmoney.payeePassword=xu06AwD3@
 nixmoney.payeeName=Exrates
 nixmoney.paymentUrl=https://lk.exrates.me/merchants/nixmoney/payment/success
 nixmoney.noPaymentUrl=https://lk.exrates.me/merchants/nixmoney/payment/failure
-nixmoney.statustUrl=https://lk.exrates.me/merchants/nixmoney/payment/status
+nixmoney.statustUrl=https://merchant.exrates.top/merchants/nixmoney/payment/status
 
