--- a/Controller/src/main/dev/merchants/nixmoney.properties
+++ b/Controller/src/main/dev/merchants/nixmoney.properties
@@ -6,6 +6,5 @@ nixmoney.payeePassword=xu06AwD3@
 nixmoney.payeeName=Exrates
 nixmoney.paymentUrl=http://127.0.0.1:9000/merchants/nixmoney/payment/success
 nixmoney.noPaymentUrl=http://127.0.0.1:9000/merchants/nixmoney/payment/failure
-#nixmoney.statustUrl=http://193.93.79.99:9000/merchants/nixmoney/payment/status
-nixmoney.statustUrl=http://195.211.146.225:9000/merchants/nixmoney/payment/status
+nixmoney.statustUrl=https://merchant.exrates.top/merchants/nixmoney/payment/status
 
