some fixes and prod config

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Status API Training Shop Blog About Pricing
 /ripp
 /script.sql
 /dev_exrates_dump.sql
+/Service/src/main/java/me/exrates/service/nem/test.java
