--- a/Controller/src/main/resources/session.properties
+++ b/Controller/src/main/resources/session.properties
@@ -2,7 +2,7 @@ session.lifeTypeParamName = sessionLifeTypeId
 session.default_session_lifetime_minutes = 20
 session.timeParamName = sessionTimeMinutes
 session.lastRequestParamName = lastRequest
-
+session.authenticationParamName=authentication
 session.passwordParam=l_password
 session.checkPinParam=l_checkPin
 session.pinParam=l_pin
