change db & some nodes endpoints

--- a/Controller/src/main/prod/merchants/ripple.properties
+++ b/Controller/src/main/prod/merchants/ripple.properties
@@ -1,6 +1,6 @@
 
-ripple.rippled.rpcUrl=http://163.172.53.240:5005
-ripple.rippled.ws=ws://163.172.53.240:6006
+ripple.rippled.rpcUrl=http://ip-172-31-45-67.us-east-2.compute.internal:5005
+ripple.rippled.ws=ws://ip-172-31-45-67.us-east-2.compute.internal:6006
 
 ripple.account.address=r9xG9Un6zjKws5dqckL4saf58J5GPuCks5
 ripple.account.secret=snkFaA2Rb8Pw7nXU4Uamd1EpKnm2f
