fix bitcoin nodes endpoints

--- a/Controller/src/main/prod/merchants/lisk.properties
+++ b/Controller/src/main/prod/merchants/lisk.properties
@@ -1,4 +1,4 @@
-lisk.node.host=http://127.0.0.1
+lisk.node.host=http://ip-172-31-45-67.us-east-2.compute.internal
 lisk.node.port=8000
 lisk.main.address=9022310477640438519L
 lisk.main.secret=game police minimum pitch damp symptom until double hire flower spray gorilla
