fix zmq node props

--- a/Controller/src/main/prod/merchants/dash_wallet.properties
+++ b/Controller/src/main/prod/merchants/dash_wallet.properties
@@ -1,4 +1,4 @@
 wallet.password=5LZurZ6QM9M8rT3YQBWm_qjdXanTVu7PrTpDtK4JC=
 backup.folder=/data/.bitcoin/dash_backup/
 node.propertySource=node_config/node_config_dash.properties
-node.zmqEnabled=false
+node.zmqEnabled=true
