--- a/Controller/src/main/prod/merchants/advcashmoney.properties
+++ b/Controller/src/main/prod/merchants/advcashmoney.properties
@@ -2,9 +2,9 @@ advcash.url=https://wallet.advcash.com/sci/
 advcash.accountId=merchant@exrates.me
 advcash.accountPass=EkCbOZh8@
 advcash.payeeName=Exrates
-advcash.paymentSuccess=https://lk.exrates.me/merchants/advcash/payment/success
-advcash.paymentFailure=https://lk.exrates.me/merchants/advcash/payment/failure
-advcash.paymentStatus=https://lk.exrates.me/merchants/advcash/payment/status
+advcash.paymentSuccess=https://exrates.me/merchants/advcash/payment/success
+advcash.paymentFailure=https://exrates.me/merchants/advcash/payment/failure
+advcash.paymentStatus=https://exrates.me/merchants/advcash/payment/status
 advcash.USDAccount=U183883380777
 advcash.EURAccount=E664903102463
 advcash.payeePassword=EkCbOZh8@
