--- a/Controller/src/main/prod/merchants/nixmoney.properties
+++ b/Controller/src/main/prod/merchants/nixmoney.properties
@@ -3,7 +3,7 @@ nixmoney.payeeAccountUSD=U58798588544478
 nixmoney.payeeAccountEUR=E28090904478879
 nixmoney.payeePassword=xu06AwD3@
 nixmoney.payeeName=Exrates
-nixmoney.paymentUrl=https://lk.exrates.me/merchants/nixmoney/payment/success
-nixmoney.noPaymentUrl=https://lk.exrates.me/merchants/nixmoney/payment/failure
-nixmoney.statustUrl=https://merchant.exrates.top/merchants/nixmoney/payment/status
+nixmoney.paymentUrl=https://exrates.me/merchants/nixmoney/payment/success
+nixmoney.noPaymentUrl=https://exrates.me/merchants/nixmoney/payment/failure
+nixmoney.statustUrl=https://exrates.me/merchants/nixmoney/payment/status
 
