--- a/Controller/src/main/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/prod/merchants/perfectmoney.properties
@@ -2,9 +2,9 @@ perfectmoney.url=https://perfectmoney.is/api/step1.asp
 perfectmoney.accountId=5096709
 perfectmoney.accountPass=0B5GYdeF@
 perfectmoney.payeeName=Exrates
-perfectmoney.paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
-perfectmoney.paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
-perfectmoney.paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
+perfectmoney.paymentSuccess=https://exrates.me/merchants/perfectmoney/payment/success
+perfectmoney.paymentFailure=https://exrates.me/merchants/perfectmoney/payment/failure
+perfectmoney.paymentStatus=https://exrates.me/merchants/perfectmoney/payment/status
 perfectmoney.USDAccount=U13584384
 perfectmoney.EURAccount=E13908218
 perfectmoney.alternatePassphrase=05V047CXHTgghLEkycoLpxwkE
