--- a/Controller/src/main/prod/merchants/edcmerchant.properties
+++ b/Controller/src/main/prod/merchants/edcmerchant.properties
@@ -1,4 +1,4 @@
 edcmerchant.token = 0190804484737779216097337067072357
 edcmerchant.main_account = input-exrates
-edcmerchant.hook = https://lk.exrates.me/merchants/edc/payment/received
+edcmerchant.hook = https://exrates.me/merchants/edc/payment/received
 edcmerchant.history = https://receive.edinarcoin.com/history/
