--- a/Controller/src/main/dev/merchants/ethereum.properties
+++ b/Controller/src/main/dev/merchants/ethereum.properties
@@ -10,7 +10,7 @@
 
 #Test
 ethereum.currency = Ethereum
-ethereum.url = http://dev.exrates.tech:8545/
+ethereum.url = https://mainnet.infura.io/qtsEMqjCpZaut6U4HG4C/
 ethereum.destinationDir = D:\\Ethereum1\\Original\\testnet\\keystore\\
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0xa8522390c0Ae551028fbfb5ef97A1aF13F5492a8
