--- a/Controller/src/main/prod/merchants/neo.properties
+++ b/Controller/src/main/prod/merchants/neo.properties
@@ -1,3 +1,5 @@
 neo.node.endpoint=http://ip-172-31-14-168.us-east-2.compute.internal:10332
 neo.main.address=AMF4Yqv1PMry2BDc9ELttPsMsohaw2D3fT
 neo.min.confirmations=30
+
+#NEO WALLET PASSWORD - IMPORTANT!! KtyJUdU2gxaFqHqfNB4CsF3ueMuPm6j6zVWS
