--- a/Controller/src/main/prod/ip_ban.properties
+++ b/Controller/src/main/prod/ip_ban.properties
@@ -1,5 +1,5 @@
-ban.short.attempts=5
-ban.long.attempts=10
+ban.short.attempts.num=5
+ban.long.attempts.num=10
 ban.short.attempts.period=300
 ban.long.attempts.period=86400
 ban.short.time=1800
