--- a/pom.xml
+++ b/pom.xml
@@ -395,6 +395,11 @@
 			<artifactId>reactor-core</artifactId>
 			<version>3.1.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>se.jiderhamn.classloader-leak-prevention</groupId>
+			<artifactId>classloader-leak-prevention-servlet3</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
 
 	</dependencies>
