fix sendmany for dash

--- a/Controller/src/main/prod/merchants/bitcoin_gold_wallet.properties
+++ b/Controller/src/main/prod/merchants/bitcoin_gold_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pr4s6EdNQBwep9SxY9NyjXFEWVGND8uAfh2C5XV8
 backup.folder=/data/.bitcoin_gold/btg_backup/
 node.propertySource=node_config/node_config_btg.properties
 node.zmqEnabled=true
+node.supportInstantSend=false
