--- a/Controller/src/main/dev/merchants/bitcoin_gold_wallet.properties
+++ b/Controller/src/main/dev/merchants/bitcoin_gold_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pass123
 backup.folder=${user.home}\\btg_backup\\
 node.propertySource=node_config/node_config_btg.properties
 node.zmqEnabled=false
+node.supportInstantSend=false
