--- a/Controller/src/main/dev/merchants/litecoin_wallet.properties
+++ b/Controller/src/main/dev/merchants/litecoin_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pass123
 backup.folder=${user.home}\\ltc_backup\\
 node.propertySource=node_config/node_config_ltc.properties
 node.zmqEnabled=false
+node.supportInstantSend=false
