--- a/Controller/src/main/prod/merchants/b2x_wallet.properties
+++ b/Controller/src/main/prod/merchants/b2x_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=cwg59fVvMCTyPWHA5N2tjwdVcfE6CHmd6D57
 backup.folder=/data/.bitcoin_cash/b2x_backup/
 node.propertySource=node_config/node_config_b2x.properties
 node.zmqEnabled=true
+node.supportInstantSend=false
