--- a/Controller/src/main/prod/merchants/bitcoin_wallet.properties
+++ b/Controller/src/main/prod/merchants/bitcoin_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=MxQR8wTcEuuNJdFzxGKz9MDcjawg_Y5N66uIHELS5JY=
 backup.folder=/data/.bitcoin/btc_backup/
 node.propertySource=node_config/node_config_btc.properties
 node.zmqEnabled=true
+node.supportInstantSend=false
