--- a/Controller/src/main/uat/merchants/bitcoin_cash_wallet.properties
+++ b/Controller/src/main/uat/merchants/bitcoin_cash_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pass123
 backup.folder=/data/.bitcoin_cash/bch_backup/
 node.propertySource=node_config/node_config_bch.properties
 node.zmqEnabled=false
+node.supportInstantSend=false
