--- a/Controller/src/main/uat/merchants/bitcoin_wallet.properties
+++ b/Controller/src/main/uat/merchants/bitcoin_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pass123
 backup.folder=/data/.bitcoin/btc_backup/
 node.propertySource=node_config/node_config_btc.properties
 node.zmqEnabled=true
+node.supportInstantSend=false
