--- a/Controller/src/main/uat/merchants/dash_wallet.properties
+++ b/Controller/src/main/uat/merchants/dash_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pass123
 backup.folder=/data/.bitcoin/dash_backup/
 node.propertySource=node_config/node_config_dash.properties
 node.zmqEnabled=true
+node.supportInstantSend=true
