--- a/Controller/src/main/uat/merchants/zec_wallet.properties
+++ b/Controller/src/main/uat/merchants/zec_wallet.properties
@@ -2,3 +2,4 @@ wallet.password=pass123
 backup.folder=${user.home}\\zec_backup\\
 node.propertySource=node_config/node_config_zec.properties
 node.zmqEnabled=false
+node.supportInstantSend=false
