add waves token

--- a/Controller/src/main/dev/merchants/waves.properties
+++ b/Controller/src/main/dev/merchants/waves.properties
@@ -1,5 +1,7 @@
-waves.rest.host=http://127.0.0.1
+waves.rest.host=http://ec2-13-59-242-131.us-east-2.compute.amazonaws.com
 waves.rest.port=6869
 waves.rest.api.key=ridethewaves!
 waves.main.account=3N8DRLQKAc9arr6q5G9AagYUExXLhDJeGH3
 waves.min.confirmations=5
+# tokens named by merchant name!!
+waves.token.GameX.id=H3nUizuYCpPnBSfAuZpr2DXVw8Pc9WNPcWwuNxJJamFW
