--- a/Controller/src/main/prod/merchants/b2x_wallet.properties
+++ b/Controller/src/main/prod/merchants/b2x_wallet.properties
@@ -1,5 +1,5 @@
 wallet.password=cwg59fVvMCTyPWHA5N2tjwdVcfE6CHmd6D57
-backup.folder=/data/.bitcoin_cash/b2x_backup/
+backup.folder=/data/.b2x/b2x_backup/
 node.propertySource=node_config/node_config_b2x.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
