--- a/Controller/src/main/prod/merchants/dash_wallet.properties
+++ b/Controller/src/main/prod/merchants/dash_wallet.properties
@@ -1,5 +1,5 @@
 wallet.password=5LZurZ6QM9M8rT3YQBWm_qjdXanTVu7PrTpDtK4JC=
-backup.folder=/data/.bitcoin/dash_backup/
+backup.folder=/data/.dash/dash_backup/
 node.propertySource=node_config/node_config_dash.properties
 node.zmqEnabled=true
 node.supportInstantSend=true
