add main address

--- a/Controller/src/main/prod/merchants/bitcoin_white.properties
+++ b/Controller/src/main/prod/merchants/bitcoin_white.properties
@@ -1,6 +1,6 @@
 lisk.node.host=http://46.105.68.73
-lisk.main.address=9638796769033749229
-lisk.main.secret=actress december enable fetch carry benefit nice also culture pilot subway slow
+lisk.main.address=16867163128677425594
+lisk.main.secret=
 lisk.min.confirmations=30
 lisk.tx.sort.prefix=t_
 lisk.tx.queryLimit=100
