fix notification email

--- a/Controller/src/main/uat/merchants/waves.properties
+++ b/Controller/src/main/uat/merchants/waves.properties
@@ -4,6 +4,6 @@ waves.rest.api.key=ridethewaves!
 waves.main.account=3N8DRLQKAc9arr6q5G9AagYUExXLhDJeGH3
 waves.min.confirmations=5
 waves.fee.account=3MxE9izMhKiD3ANksRpvKfzPkjQ6F7ER1R7
-waves.notify.email=golvazin@gmail.com
+waves.notify.email=mdovgodko@gmail.com
 # tokens named by merchant name!!
 waves.token.GameX.id=3wUfc4mWYtLTDgYwHiEYBJBbU75aqH8wjUnsQu8gsHin
