change prod addresses

--- a/Controller/src/main/prod/merchants/stellar.properties
+++ b/Controller/src/main/prod/merchants/stellar.properties
@@ -1,5 +1,7 @@
 stellar.horizon.url=https://horizon.stellar.org:443
 stellar.horizon.url_public=http://ip-172-31-14-168.us-east-2.compute.internal:8000
-stellar.account.name=GBKTJSNUSR6OCXA5WDWGT33MNSCNQHOBQUBYC7TVS7BOXDKWFNHI4QNH
-stellar.account.seed=SDJELEILEN2O23OZ4GA27MWHWG54VPPYQB7TEV2H67QLEWMGMG3D3I6X
+stellar.account.name=GCMXCY23EVYR5BMW4LS7SUELIV7GR5FCMY5YORXANDAPDS4XHM6XEOAS
+stellar.account.seed=
+stellar.account.name_old=GBKTJSNUSR6OCXA5WDWGT33MNSCNQHOBQUBYC7TVS7BOXDKWFNHI4QNH
+stellar.account.seed_old=SDJELEILEN2O23OZ4GA27MWHWG54VPPYQB7TEV2H67QLEWMGMG3D3I6X
 stellar.mode=PUBLIC
